--- a/css/drupal.webform.css
+++ b/css/drupal.webform.css
@@ -110,7 +110,8 @@
   position: relative;
 }
 
-.text-count-message, .description {
+.text-count-message,
+.description {
   font-size: .875rem;
   --tw-text-opacity: 1;
   color: rgb(97 97 97 / var(--tw-text-opacity));
@@ -125,8 +126,7 @@
   border-width: 1px;
   text-align: center;
   text-transform: uppercase;
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
+  text-decoration-line: none;
   padding: 0.5em 1em .3em;
   cursor: pointer;
   transition: all 0.125s ease-out;
@@ -138,8 +138,7 @@
 }
 
 .webform-submission-form input[type="submit"]:not(.webform-button--submit):hover {
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
+  text-decoration-line: none;
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
